feat: change footer tittle

--- a/contactos.html
+++ b/contactos.html
@@ -89,7 +89,7 @@
 
   <footer>
     <p class="center">
-      © Todos os direitos reservados | Formação Citeforma 2024
+      Formação | Citeforma 2024 | UFCD 5414 Programação para a WEB - cliente (Client-side)
     </p>
     <div class="grid-container">
       <div class="grid-item title">Redes sociais</div>
