feat: add table info on pikachu and bulbasaur files

--- a/bulbasaur.html
+++ b/bulbasaur.html
@@ -30,7 +30,30 @@
   <main>
     <img src="img/bulbasaur.jpg" />
     <br />
-    <a href="index.html">Início</a>
+    <table>
+      <thead>
+          <tr>
+              <th>Nome</th>
+              <th>Tipo</th>
+              <th>Espécie</th>
+              <th>Altura</th>
+              <th>Peso</th>
+              <th>Habilidades</th>
+              <th>Origem do nome</th>
+          </tr>
+      </thead>
+      <tbody>
+          <tr>
+              <td>Bulbasaur</td>
+              <td>GRASS/POISON</td>
+              <td>Seed Pokémon</td>
+              <td>0.7 m</td>
+              <td>6.9 kg</td>
+              <td>Overgrow</td>
+              <td>bulb (bulbo) + dinosaur (dinossauro)</td>
+          </tr>
+      </tbody>
+  </table>
   </main>
   <footer>
     <p class="center">
