--- a/pikachu.html
+++ b/pikachu.html
@@ -30,7 +30,30 @@
   <main>
     <img src="img/pikachu.jpg" />
     <br />
-    <a href="index.html">Início</a>
+    <table>
+      <thead>
+          <tr>
+              <th>Nome</th>
+              <th>Tipo</th>
+              <th>Espécie</th>
+              <th>Altura</th>
+              <th>Peso</th>
+              <th>Habilidades</th>
+              <th>Origem do nome</th>
+          </tr>
+      </thead>
+      <tbody>
+          <tr>
+              <td>Pikachu</td>
+              <td>ELECTRIC</td>
+              <td>Mouse Pokémon</td>
+              <td>0.4 m</td>
+              <td>6.0 kg</td>
+              <td>Static</td>
+              <td>pikapika (sparkle em japonês) chu (squeak em japonês)</td>
+          </tr>          
+      </tbody>
+  </table>
   </main>
   <footer>
     <p class="center">
