feat: minor correction in table info on pikachu and bulbassaur files

--- a/bulbasaur.html
+++ b/bulbasaur.html
@@ -50,7 +50,8 @@
               <td>0.7 m</td>
               <td>6.9 kg</td>
               <td>Overgrow</td>
-              <td>bulb (bulbo) + dinosaur (dinossauro)</td>
+              <td>bulb (tipo de planta) <br />
+                saur (lagarto)</td>
           </tr>
       </tbody>
   </table>
