--- a/pikachu.html
+++ b/pikachu.html
@@ -50,7 +50,8 @@
               <td>0.4 m</td>
               <td>6.0 kg</td>
               <td>Static</td>
-              <td>pikapika (sparkle em japonês) chu (squeak em japonês)</td>
+              <td>pikapika (sparkle em japonês) <br />
+                chu (squeak em japonês)</td>
           </tr>          
       </tbody>
   </table>
