feat: add historia link to nav

--- a/bulbasaur.html
+++ b/bulbasaur.html
@@ -20,6 +20,9 @@
         </div>
       </li>
       <li>
+        <a href="/historia.html">História</a>
+      </li>
+      <li>
         <a href="/contactos.html">Contactos</a>
       </li>
     </ul>
