--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
         </div>
       </li>
       <li>
+        <a href="/historia.html">História</a>
+      </li>
+      <li>
         <a href="/contactos.html">Contactos</a>
       </li>
     </ul>
