feat: add historia file

--- a/historia.html
+++ b/historia.html
@@ -30,40 +30,21 @@
   </nav>
 
   <header>
-    <h1>Como capturar o seu Pokémon?</h1>
+    <h1>História dos Pokémons</h1>
   </header>
   <main>
-    <p class="center"><img src="img/bola.jpg" /></p>
-    <h2>Primeira Geração de Pokémons</h2>
-    <div class="flex-container">
-      <div>
-        <a href="pikachu.html"><img src="img/pikachu.jpg" class="imagenspokemons" /></a>
-      </div>
-      <div>
-        <a href="bulbasaur.html"><img src="img/bulbasaur.jpg" class="imagenspokemons" /></a>
-      </div>
-      <div>
-        <a href="#"><img src="img/magikarp.png" class="imagenspokemons" /></a>
-      </div>
-      <div>
-        <a href="#"><img src="img/charmander.jpg" class="imagenspokemons" /></a>
-      </div>
-      <div>
-        <a href="#"><img src="img/pokemon.jpg" class="imagenspokemons" /></a>
-      </div>
-      <div>
-        <a href="#"><img src="img/pokemon.jpg" class="imagenspokemons" /></a>
-      </div>
-      <div>
-        <a href="#"><img src="img/pokemon.jpg" class="imagenspokemons" /></a>
-      </div>
+    <div class="historia">
+      <p>Tajiri teve a ideia de Pokémon por volta de 1989 ou 1990, quando o Game Boy foi lançado. O conceito do universo
+        Pokémon foi inspirado no passatempo do diretor executivo Satoshi Tajiri de colecionar insetos quando era
+        criança, Então como as crianças estavam prestando mais atencão aos videogames do que a brincar ao ar livre (Ou
+        fazer isso) Ele decidiu fazer um videogame onde as crianças podiam fazer isso, Mas com monstros! [12] Os
+        jogadores dos jogos são chamados de Treinadores Pokémon e dois dos principais objetivos (na maioria dos jogos
+        Pokémon) para os Treinadores são: completar a Pokédex, capturando todas as espécies Pokémon disponíveis; e
+        treinar seu time de Pokémon para competir contra o time de outros Treinadores e, eventualmente, se tornar o mais
+        forte Treinador: um Mestre Pokémon. O conceito de capturar, treinar e batalhar estão presentes em quase todas as
+        versões da franquia Pokémon, incluindo nos jogos, no anime e na série de mangá, e no jogo de cartas.</p>
+      <img src="img/bola.jpg" />
     </div>
-    <h2>Segunda Geração</h2>
-    <ul>
-      <li>Chikorita</li>
-      <li>Pupitar</li>
-      <li>Slugma</li>
-    </ul>
   </main>
   <footer>
     <p class="center">
