--- a/bulbasaur.html
+++ b/bulbasaur.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+  <img src="/img/logo.png" alt="Logo">
   <nav>
     <ul>
       <li><a href="/index.html">Início</a></li>
@@ -31,7 +32,7 @@
     <h1>Bulbasaur</h1>
   </header>
   <main>
-    <img src="img/bulbasaur.jpg" />
+    <p class="center"><img src="img/bulbasaur.jpg" /></p>
     <br />
     <table>
       <thead>
