--- a/historia.html
+++ b/historia.html
@@ -9,8 +9,8 @@
 </head>
 
 <body>
-  <img src="/img/logo.png" alt="Logo" class="logo" />
-  <nav>
+  <nav class="navbar">
+    <img src="/img/logo.png" alt="Logo" class="logo" />
     <ul>
       <li><a href="/index.html">Início</a></li>
       <li class="dropdown">
