--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
   <link rel="stylesheet" type="text/css" href="style.css" />
 </head>
 
-<body>
-  <img src="/img/logo.png" alt="Logo" class="logo" />
-  <nav>
+<body>  
+  <nav class="navbar">
+    <img src="/img/logo.png" alt="Logo" class="logo" />
     <ul>
       <li><a href="/index.html">Início</a></li>
       <li class="dropdown">
