--- a/pokemons.html
+++ b/pokemons.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
-<html lang="pt-pt">
+<html lang="pt-pt"> <!--idioma-->
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Salão de Pokémons</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <meta charset="utf-8"> <!-- Codificação em charset UTF-8 -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!--responsividade - escala 100%-->
+    <title>Salão de Pokémons</title> <!-- título do separador -->
+    <link rel="stylesheet" type="text/css" href="style.css"> <!-- ligação à folha de estilos -->
 </head>
 
 <body>
     <img src="img/logo.png">
+
     <!-- Barra de navegação -->
     <nav>
         <ul>
@@ -25,38 +26,17 @@
             <li><a href="contactos.html">Contactos</a></li>
         </ul>
     </nav>
+
     <!--cabeçalho da página-->
     <header>
-        <h1>Pikachu</h1>
+        <h1>Os Pokémons</h1>
     </header>
-
     <main>
-        <p class="center"><img src="img/pikachu.jpg"></p>
-        <br>
-        <table>
-            <tr>
-                <th>Nome</th>
-                <th>Tipo</th>
-                <th>Espécie</th>
-                <th>Altura</th>
-                <th>Peso</th>
-                <th>Habilidades</th>
-                <th>Origem do nome</th>
-            </tr>
-            <tr>
-                <td>Pikachu</td>
-                <td>ELECTRIC</td>
-                <td>Mouse Pokémon</td>
-                <td>0.4 m</td>
-                <td>6.0 kg</td>
-                <td>Static</td>
-                <td>pikapika (<em>sparkle</em> em japonês)
-                    <br>
-                    chu (<em>squeak</em> em japonês)
-                </td>
-            </tr>
-        </table>
+
+        <p></p>        
         <p></p>
+
+
     </main>
 
     <!--rodapé-->
