feat: add história page

--- a/pokemons.html
+++ b/pokemons.html
@@ -32,8 +32,13 @@
         <h1>Os Pokémons</h1>
     </header>
     <main>
-
-        <p></p>        
+        <h2>1.º Exemplo de javascript</h2>
+        <p class="texto">N.º de Pokémons no site <strong><em>Salão de Pokémons</em></strong>:
+            <strong id="contagem">0</strong>
+        </p>        
+        <script>
+            document.getElementById("contagem").innerHTML = 10;
+        </script>
         <p></p>
 
 
