--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     <a href="pikachu.html">Pikachu</a>
                 </div>
             </li>
-            <li><a href="pokemons.html">História</a></li>
+            <li><a href="historia.html">História</a></li>
             <li><a href="contactos.html">Contactos</a></li>
         </ul>
     </nav>
