--- a/historia.html
+++ b/historia.html
@@ -22,7 +22,7 @@
                     <a href="pikachu.html">Pikachu</a>
                 </div>
             </li>
-            <li><a href="pokemons.html">História</a></li>
+            <li><a href="historia.html">História</a></li>
             <li><a href="contactos.html">Contactos</a></li>
         </ul>
     </nav>
@@ -35,10 +35,19 @@
         <h2>1.º Exemplo de javascript</h2>
         <p class="texto">N.º de Pokémons no site <strong><em>Salão de Pokémons</em></strong>:
             <strong id="contagem">0</strong>
-        </p>        
+        </p>
+        <button id="mais">mais pokemons</button>
+        <button id="menos">menos pokemons</button>
         <script>
-            document.getElementById("contagem").innerHTML = 10;
+            document.querySelector("#mais").onclick = function () {
+                document.getElementById("contagem").innerText = parseInt(document.getElementById("contagem").innerText) + 1;
+            }
+            document.querySelector("#menos").onclick = function () {
+                document.getElementById("contagem").innerText = parseInt(document.getElementById("contagem").innerText) - 1;
+            }
+            document.getElementById("contagem").innerText = 10;
         </script>
+
         <p></p>
 
 
@@ -73,4 +82,5 @@
         </div>
     </footer>
 </body>
+
 </html>
