feat: add second javascript example

--- a/historia.html
+++ b/historia.html
@@ -57,8 +57,17 @@
             }
             document.getElementById("contagem").innerText = 10;
         </script>
-
-        <p></p>
+        <h2>2.º Exemplo de Javascript</h2>
+        <p id="idade" class="texto"></p>
+        <script>
+            let anoCriacao, anoActual, idade;
+            anoCriacao = 1989;
+            anoActual = new Date().getFullYear();
+            idade = anoActual - anoCriacao;
+            document.getElementById("idade").innerHTML = 
+            "Os Pokémons, de acordo com a <em>Wikipédia</em>, surgiram há <strong>" +
+            idade + "</strong> anos.";
+        </script>
 
 
     </main>
