feat: add 3rd javascript example

--- a/historia.html
+++ b/historia.html
@@ -70,6 +70,17 @@
                 idade + "</strong> anos.";
         </script>
 
+        <h2>3.º Exemplo de Javascript</h2>
+        <div id="imagens">
+            <p class="center">
+                <img id="poke" src="img/bola.jpg" class="tamanho-imagem-slider">
+                <br>
+                <button onclick="document.getElementById('poke').src='img/bola.jpg'" class="botao">bola</button>
+                <button onclick="document.getElementById('poke').src='img/cartas.jpg'" class="botao">cartas</button>
+            </p>
+
+        </div>
+
 
     </main>
 
