feat: add 4th javascript example

--- a/historia.html
+++ b/historia.html
@@ -80,6 +80,11 @@
             </p>
         </div>
 
+        <h2>4.º Exemplo de Javascript</h2>
+        <div id="origem"></div>
+        <div id="texto" class="texto"></div>
+        <script src="scripts/historia.js"></script>
+
 
     </main>
 
