feat: add 5th javascript example

--- a/historia.html
+++ b/historia.html
@@ -85,6 +85,26 @@
         <div id="texto" class="texto"></div>
         <script src="scripts/historia.js"></script>
 
+        <h2>5.º Exemplo de Javascript</h2>
+        <h2>Em números</h2>
+        <section>
+            <article>
+                <span class="de">+ de</span>
+                <span class="numero" data-value="35">0</span>
+                <p>Anos</p>
+            </article>
+            <article>
+                <span class="de">+ de</span>
+                <span class="numero" data-value="898">0</span>
+                <p>N.º de pokémons</p>
+            </article>
+            <article>
+                <span class="de">+ de</span>
+                <span class="numero" data-value="268">0</span>
+                <p>Habilidades</p>
+            </article>
+        </section>
+        <script src="scripts/numeros.js"></script>
 
     </main>
 
