--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="msapplication-config" content="img/favicon/browserconfig.xml">
     <meta name="theme-color" content="#ffffff">
+
+    <!--scripts-->
 </head>
 
 <body>
@@ -42,8 +44,10 @@
     </header>
 
     <main>
+    
         <p class="center"><img src="img/bola.jpg"></p>
-        <h2> Primeira Geração</h2>
+
+                <h2> Primeira Geração</h2>
         <div class="flex-container-galeria">
             <div><a href="pikachu.html"><img src="img/pikachu.jpg" class="imagenspokemons"></a></div>
             <div><a href="bulbasaur.html"><img src="img/bulbasaur.jpg" class="imagenspokemons"></a></div>
@@ -63,24 +67,26 @@
 
     <!------rodapé-------->
     <footer>
-        <p class="center">Formação | Citeforma 2024 | UFCD 5414 Programação para a WEB - cliente (Client-side)</p>
+        <p class="center">Formação | Citeforma 2024 | UFCD 5414 Programação para a WEB - cliente (<em>Client-side</em>)
+        </p>
 
         <div class="grid-container-footer">
             <div class="grid-itemfooter">
                 <p class="bold">Redes Sociais</p>
-                <p>Facebook</p>
-                <p>Instagram</p>
-                <p>Youtube</p>
+                <p><a href="https://www.facebook.com/" target="_blank">Facebook</a></p>
+                <p><a href="https://www.instagram.com/" target="_blank">Instagram</a></p>
+                <p><a href="https://www.youtube.com/" target="_blank">Youtube</a></p>
             </div>
             <div class="grid-itemfooter">
                 <p class="bold">Menu do site</p>
-                <p>Início</p>
-                <p>Contactos</p>
+                <p><a href="index.html">Início</a></p>
+                <p><a href="historia.html">História</a></p>
+                <p><a href="contactos.html">Contactos</a></p>
             </div>
             <div class="grid-itemfooter">
                 <p class="bold">Ligações úteis</p>
-                <p>Citeforma</p>
-                <p>W3Schools</p>
+                <p><a href="https://www.citeforma.pt/" target="_blank">Citeforma</a></p>
+                <p><a href="https://www.w3schools.com/" target="_blank">W3Schools</a></p>
             </div>
             <div class="grid-itemfooter">
                 <p class="bold">Contactos</p>
