--- a/pikachu.html
+++ b/pikachu.html
@@ -71,24 +71,26 @@
 
     <!--rodapé-->
     <footer>
-        <p class="center">Formação | Citeforma 2024 | UFCD 5414 Programação para a WEB - cliente (Client-side)</p>
+        <p class="center">Formação | Citeforma 2024 | UFCD 5414 Programação para a WEB - cliente (<em>Client-side</em>)
+        </p>
 
         <div class="grid-container-footer">
             <div class="grid-itemfooter">
                 <p class="bold">Redes Sociais</p>
-                <p>Facebook</p>
-                <p>Instagram</p>
-                <p>Youtube</p>
+                <p><a href="https://www.facebook.com/" target="_blank">Facebook</a></p>
+                <p><a href="https://www.instagram.com/" target="_blank">Instagram</a></p>
+                <p><a href="https://www.youtube.com/" target="_blank">Youtube</a></p>
             </div>
             <div class="grid-itemfooter">
                 <p class="bold">Menu do site</p>
-                <p>Início</p>
-                <p>Contactos</p>
+                <p><a href="index.html">Início</a></p>
+                <p><a href="historia.html">História</a></p>
+                <p><a href="contactos.html">Contactos</a></p>
             </div>
             <div class="grid-itemfooter">
                 <p class="bold">Ligações úteis</p>
-                <p>Citeforma</p>
-                <p>W3Schools</p>
+                <p><a href="https://www.citeforma.pt/" target="_blank">Citeforma</a></p>
+                <p><a href="https://www.w3schools.com/" target="_blank">W3Schools</a></p>
             </div>
             <div class="grid-itemfooter">
                 <p class="bold">Contactos</p>
