--- a/pikachu.html
+++ b/pikachu.html
@@ -32,6 +32,7 @@
                 </div>
             </li>
             <li><a href="historia.html">História</a></li>
+            <li><a href="galeria.html">Galeria</a></li>
             <li><a href="contactos.html">Contactos</a></li>
         </ul>
     </nav>
